Quick fix for z-index on memee-style.container

--- a/memmee-client/src/main/resources/static/css/memmee.css
+++ b/memmee-client/src/main/resources/static/css/memmee.css
@@ -603,7 +603,7 @@ html{
     height: 141px;
     padding: 38px 18px 18px 26px;
     overflow: hidden;
-    z-index: 100;
+    z-index: 900;
     background: transparent url('../img/bg-dropdown.png') top left no-repeat;
 }
 .memmee-style.dropdown{
